--- a/css/project.css
+++ b/css/project.css
@@ -24,8 +24,9 @@
 
 html {
     width: 100%;
-    /* ИСПРАВЛЕНО: height: 100% удалено, чтобы работала прокрутка окна для кнопки ScrollToTop */
-    min-height: 100%; 
+    min-height: 100%;
+    /* ИСПРАВЛЕНО: Принудительно показываем скроллбар всегда, чтобы страница не прыгала */
+    overflow-y: scroll; 
     overflow-x: hidden;
 }
 
