--- a/css/project.css
+++ b/css/project.css
@@ -25,9 +25,8 @@
 html {
     width: 100%;
     min-height: 100%;
-    /* ИСПРАВЛЕНО: Принудительно показываем скроллбар всегда, чтобы страница не прыгала */
-    overflow-y: scroll; 
-    overflow-x: hidden;
+    /* ИСПРАВЛЕНО: Резервируем место под скроллбар, чтобы сайт не дергался */
+    scrollbar-gutter: stable;
 }
 
 body {
